--- a/smsengine.html
+++ b/smsengine.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: defaultdark
 ---
 
 
 
  
-    <main class="m-0 body">
+    <main class="m-0">
       <section class="section m-0">
         
         <div class="text-center">
