--- a/downloads.html
+++ b/downloads.html
@@ -28,7 +28,13 @@ layout: default
 
             <div class="row py-2 px-2   row-cols-1 row-cols-sm-1 row-cols-md-4 g-5 py-5">
 
-               
+                <div class="col  ">
+                    <button class="btn pdf  fw-bold xlg btn-danger" onclick="window.location.href='docs/aysh.pdf' ">
+ALL OUR SERVICES .pdf
+</button>
+                </div>
+
+
                 <div class="col  ">
                     <button class="btn pdf  fw-bold xlg btn-info" onclick="window.location.href='docs/pharmacy.pdf' ">
 ONLINE PHARMACY .pdf
@@ -77,6 +83,12 @@ FACEBOOK ADVERTISEMENT .pdf
             <div class="col  ">
                 <button class="btn pdf xlg btn-danger fw-bold" onclick="window.location.href='docs/ayshTuts.pdf' ">
 SKILLS TRAINING .pdf
+</button>
+            </div>
+
+            <div class="col  ">
+                <button class="btn pdf xlg btn-warning fw-bold" onclick="window.location.href='docs/mastercard.pdf' ">
+MASTERCARD - MOBILE MONEY .pdf
 </button>
             </div>
 
