edited training fees 2022

--- a/training.html
+++ b/training.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+published: true
 ---
     <main>
 
@@ -62,9 +63,7 @@ layout: default
                         </tr>
                         <tr>
                             <th scope="row">FEE: </th>
-                            <td colspan="2">UGX 250,000 ONLY</td>
-
-                        </tr>
+                            <td colspan="2">UGX 350,000 ONLY</td></tr>
 
                       
                         <tr>
@@ -247,7 +246,7 @@ UGX 100,000
                         </tr>
                         <tr>
                             <th scope="row">FEE: </th>
-                            <td colspan="2">UGX 250,000 ONLY</td>
+                            <td colspan="2">UGX 350,000 ONLY</td>
 
                         </tr>
 
@@ -430,7 +429,7 @@ UGX 100,000
                         </tr>
                         <tr>
                             <th scope="row">FEE: </th>
-                            <td colspan="2">UGX 300,000 ONLY</td>
+                            <td colspan="2">UGX 400,000 ONLY</td>
 
                         </tr>
 
@@ -764,4 +763,3 @@ UGX 100,000
     <script src="js/jquery3.6.js"></script>
     <script src="js/typing.js"></script>
     <script src="js/script.js"></script>
-
